--- a/bUSDC10/index.html
+++ b/bUSDC10/index.html
@@ -637,7 +637,7 @@
     // ✅ Set this to the endpoint you already tested (HTTP 201 OK)
     // It must accept JSON { xdr: "<base64-xdr>", network_passphrase: "<passphrase>" }
     // and return JSON with { xdr, network_passphrase, hash }.
-    const LOBSTR_VAULT_CREATE_URL = "PASTE_YOUR_WORKING_LOBSTR_VAULT_ENDPOINT_HERE";
+    const LOBSTR_VAULT_CREATE_URL = "https://vault.lobstr.co/api/transactions/";
 
     // Fee: 0.15%
     const FEE_BPS_NUM = 15n;
